2008-06-20  Michael Natterer  <mitch@gimp.org>

	Latest GTK+ trunk deprecations showed some uglyness in gimp:

	* app/tools/gimpeditselectiontool.h: we were still using GTK_CHECK
	macros here, use proper G_TYPE type checking instead.

	* app/widgets/gimpuimanager.c
	* app/widgets/gimpdockable.c: s/GtkDestroyNotify/GDestroyNotify/.

	* plug-ins/help-browser/gimpthrobber.c: s/GtkType/GType/.

	* plug-ins/common/filter-pack.c
	* plug-ins/common/sample-colorize.c
	* plug-ins/imagemap/imap_main.c: s/GtkSignalFunc/GCallback/.

2008-06-15  Michael Natterer  <mitch@gimp.org>

	* configure.in: in the check for xfixes, add "true" as
	action-if-not-found so it doesn't bail out when xfixes is not
	found.

	There seems to be something fishy with the PKG_CHECK_MODULES()
	macro since adding a simple comma should also count as empty 4th
	argument.

2008-06-15  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.5.2.

2008-06-15  Sven Neumann  <sven@gimp.org>

	* Made 2.5.1 development release.

2008-06-14  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in (gegl_required_version)
	* app/sanity.c (GEGL_REQUIRED_MICRO): depend on the newest
	released GEGL, version 0.0.18.

2008-06-13  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: added a preliminary user
	interface to control the 'user-manual-online' property.

2008-06-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_motion):
	Correct the improved display of the rectangle ratio.

2008-06-13  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptextoptions.c (gimp_text_options_class_init):
	we need to define the 'highlight' property here as well.

2008-06-13  Michael Natterer  <mitch@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpsettingsbox.[ch]: new widget containing the
	combo and menu button for the image map tool settings plus most of